--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fakebook - log in or sign up</title>
-    <link rel="shortcut icon" href="Images/fbk2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="fbk2.ico" type="image/x-icon">
     </head>
     <style>
         *{background-color: #F0F2F5; margin: 0px; padding: 0px; font-family:Helvetica; text-decoration: none;}
